--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
+@font-face {
+  font-family: "TTNorms";
+  src: url("/src/assets/fonts//TTNorms-Medium.otf") format("otf");
+}
+
 :root {
+  /* font-family: "TTNorms"; */
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
+  --custom-gray: rgba(210, 213, 219, 1);
+  --blue-0: rgba(170, 180, 199, 1);
+  --blue-200: rgba(114, 122, 137, 1);
+  --blue-500: rgba(44, 49, 59, 1);
+  --default-50: rgba(244, 244, 245, 1);
+  --default-100: rgba(233, 234, 235, 1);
   --fontPrimary: rgba(248, 248, 248, 1);
   --fontSecondary: rgba(126, 131, 140, 1);
 }
