--- a/src/components/MainBoard/mainBoard.module.scss
+++ b/src/components/MainBoard/mainBoard.module.scss
@@ -1,5 +1,24 @@
-.main {
-  margin-top: 200px;
+.layout {
+  margin: 200px 0 100px 0;
+  margin-right: 100px;
+  display: flex;
+  flex-direction: column;
   height: 80%;
   width: 100%;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 20px;
+  height: 80%;
+  width: 100%;
+}
+
+.heading {
+  font-weight: 700;
+  font-size: 44px;
+
+  color: var(--default-850);
 }
