--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -9,7 +9,7 @@
   background-color: rgba(33, 35, 40, 1);
   color: var(--fontPrimary);
   border-radius: 32px;
-  padding: 16px;
+  padding: 16px 16px 50px 16px;
 }
 
 .teamsHeader {
