--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --blue-500: rgba(44, 49, 59, 1);
   --default-50: rgba(244, 244, 245, 1);
   --default-100: rgba(233, 234, 235, 1);
+  --default-400: rgba(169, 170, 174, 1);
   --default-700: rgba(89, 91, 94, 1);
   --default-850: rgba(46, 47, 48, 1);
   --default-900: rgba(32, 32, 33, 1);
