--- a/src/components/MainBoard/TasksList/Task/task.module.scss
+++ b/src/components/MainBoard/TasksList/Task/task.module.scss
@@ -1,3 +1,5 @@
+@use "@shared/mixins";
+
 .main {
   display: flex;
   flex-direction: column;
@@ -40,6 +42,8 @@
 }
 
 .taskId {
+  @include mixins.dropButtonStyle();
+
   padding: 4px 8px;
   width: fit-content;
   background-color: var(--custom-gray);
