--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,11 @@
   --blue-0: rgba(170, 180, 199, 1);
   --blue-200: rgba(114, 122, 137, 1);
   --blue-500: rgba(44, 49, 59, 1);
+  --dark-blue-400: rgba(57, 63, 75, 1);
   --default-50: rgba(244, 244, 245, 1);
   --default-100: rgba(233, 234, 235, 1);
   --default-400: rgba(169, 170, 174, 1);
+  --default-600: rgba(118, 120, 124, 1);
   --default-700: rgba(89, 91, 94, 1);
   --default-850: rgba(46, 47, 48, 1);
   --default-900: rgba(32, 32, 33, 1);
