--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --default-50: rgba(244, 244, 245, 1);
   --default-100: rgba(233, 234, 235, 1);
   --default-400: rgba(169, 170, 174, 1);
+  --default-500: rgba(147, 149, 154, 1);
   --default-600: rgba(118, 120, 124, 1);
   --default-700: rgba(89, 91, 94, 1);
   --default-850: rgba(46, 47, 48, 1);
