--- a/src/pages/Dashboard/dashboard.module.scss
+++ b/src/pages/Dashboard/dashboard.module.scss
@@ -6,3 +6,26 @@
   align-items: center;
   height: 100vh;
 }
+
+.unauthorized {
+  position: absolute;
+  top: 25%;
+  left: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 300px;
+  height: 200px;
+}
+
+.authLink {
+  padding: 5px;
+
+  background-color: var(--blue-0);
+  border-radius: 5px;
+  color: var(--blue-500);
+  font-size: 14px;
+  text-decoration: none;
+}
